--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="grid.css">
     <link rel="stylesheet" href="styles.min.css">
 </head>
 
 <body>
-    <div class="promo">
+    <div class="promo_bg">
         <header>
-            <img src="img/logo.svg" alt="logo_img" class="logo">
             <nav>
+                <img src="img/logo.svg" alt="logo_img" class="logo">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Company</a></li>
@@ -22,9 +23,20 @@
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Blog</a></li>
                 </ul>
+                <button><a href="#">Trade Now</a></button>
             </nav>
-            <button><a href="#">Trade Now</a></button>
         </header>
+        <main>
+            <section class="promo">
+                <div class="container">
+                    <img class="header_img" src="img/header_img.svg" alt="image">
+                    <h1 class="header_title">Make better businees <br>with Cryptocurrency</h1>
+                    <p class="header_subtitle">We offers users a fully operational long-term rental platform<br>It
+                        plans to leverages blockchain technology.</p>
+                    <button class="white_listed"><a href="#">Get Whitelisted</a></button>
+                </div>
+            </section>
+        </main>
     </div>
     <div class="promo_bottom_img"></div>
 
