table section done

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <div class="promo_bg">
-        <header>
+    <header>
+        <div class="header_wrapper">
             <nav>
                 <img src="img/logo.svg" alt="logo_img" class="logo">
                 <ul>
@@ -25,13 +25,16 @@
                 </ul>
                 <button><a href="#">Trade Now</a></button>
             </nav>
-        </header>
+        </div>
+    </header>
+    <div class="promo_bg">
         <main>
             <section class="promo">
                 <div class="container">
                     <img class="header_img" src="img/header_img.svg" alt="image">
                     <h1 class="header_title">Make better businees <br>with Cryptocurrency</h1>
-                    <p class="header_subtitle">We offers users a fully operational long-term rental platform<br>It
+                    <p class="header_subtitle">We offers users a fully operational long-term rental
+                        platform<br>It
                         plans to leverages blockchain technology.</p>
                     <button class="white_listed"><a href="#">Get Whitelisted</a></button>
                 </div>
@@ -39,6 +42,106 @@
         </main>
     </div>
     <div class="promo_bottom_img"></div>
+    <section class="crypto_prices">
+        <div class="container">
+            <h2 class="subtitle">Today's Cryptocurrency Prices</h2>
+            <table cellspacing="0">
+                <thead>
+                    <tr>
+                        <th class="number">#<img src="img/up_arrow.svg" alt="up_arrow" class="up_arrow"></th>
+                        <th class="name">Name</th>
+                        <th class="price">Price</th>
+                        <th class="h24">24h %</th>
+                        <th class="d7">7d %</th>
+                        <th class="master">Market Cap <img src="img/info_icon.svg" alt="info_icon" class="info_icon">
+                        </th>
+                        <th class="volume">Volume (24h)</th>
+                        <th class="last7d">Last 7 Days</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="star"><img class="star_img" src="img/star.svg" alt="image">1</td>
+                        <td class="fz13"><img src="img/crypto_icons/btc.svg" alt="btc_icon"
+                                class="crypto_icon">Bitcoin<span>Btc</span></td>
+                        <td>$55,206.61</td>
+                        <td class="green_color fz13"><img src="img/crypto_icons/crypto_up.svg" alt="img"
+                                class="crypto_up">0.92%</td>
+                        <td class="green_color fz13"><img src="img/crypto_icons/crypto_up.svg" alt="img"
+                                class="crypto_up">15.86%</td>
+                        <td>$1,046,899,935,348</td>
+                        <td class="text_align_right padding_top">$1,046,899,935,348<br><span>653,452 BTC</span></td>
+                        <td class="text_align_right"><img src="img/line.svg" alt="line_img" class="line_img"></td>
+                    </tr>
+                    <tr>
+                        <td class="star"><img class="star_img" src="img/star.svg" alt="image">2</td>
+                        <td class="fz13"><img src="img/crypto_icons/eth.svg" alt="eth_icon"
+                                class="crypto_icon">Ethereum<span>Eth</span></td>
+                        <td>$55,206.61</td>
+                        <td class="red_color fz13"><img src="img/crypto_icons/crypto_down.svg" alt="img"
+                                class="crypto_down">0.92%</td>
+                        <td class="green_color fz13"><img src="img/crypto_icons/crypto_up.svg" alt="img"
+                                class="crypto_up">15.86%</td>
+                        <td>$1,046,899,935,348</td>
+                        <td class="text_align_right padding_top ">$1,046,899,935,348<br><span>653,452 BTC</span></td>
+                        <td class="text_align_right"><img src="img/line.svg" alt="line_img" class="line_img"></td>
+                    </tr>
+                    <tr>
+                        <td class="star"><img class="star_img" src="img/star.svg" alt="image">3</td>
+                        <td class="fz13"><img src="img/crypto_icons/ada.svg" alt="ada_icon"
+                                class="crypto_icon">Cardano<span>Ada</span></td>
+                        <td>$55,206.61</td>
+                        <td class="red_color fz13"><img src="img/crypto_icons/crypto_down.svg" alt="img"
+                                class="crypto_down">0.92%</td>
+                        <td class="red_color fz13"><img src="img/crypto_icons/crypto_down.svg" alt="img"
+                                class="crypto_down">15.86%</td>
+                        <td>$1,046,899,935,348</td>
+                        <td class="text_align_right padding_top ">$1,046,899,935,348<br><span>653,452 BTC</span></td>
+                        <td class="text_align_right"><img src="img/line_red.svg" alt="line_img" class="line_img"></td>
+                    </tr>
+                    <tr>
+                        <td class="star"><img class="star_img" src="img/star.svg" alt="image">4</td>
+                        <td class="fz13"><img src="img/crypto_icons/usdt.svg" alt="usdt_icon"
+                                class="crypto_icon">Tether<span>Usdt</span></td>
+                        <td>$55,206.61</td>
+                        <td class="green_color fz13"><img src="img/crypto_icons/crypto_up.svg" alt="img"
+                                class="crypto_up">0.92%</td>
+                        <td class="green_color fz13"><img src="img/crypto_icons/crypto_up.svg" alt="img"
+                                class="crypto_up">15.86%</td>
+                        <td>$1,046,899,935,348</td>
+                        <td class="text_align_right padding_top ">$1,046,899,935,348<br><span>653,452 BTC</span></td>
+                        <td class="text_align_right"><img src="img/line.svg" alt="line_img" class="line_img"></td>
+                    </tr>
+                    <tr>
+                        <td class="star"><img class="star_img" src="img/star.svg" alt="image">5</td>
+                        <td class="fz13"><img src="img/crypto_icons/avax.svg" alt="avax_icon"
+                                class="crypto_icon">Avalanche<span>Avax</span></td>
+                        <td>$55,206.61</td>
+                        <td class="red_color fz13"><img src="img/crypto_icons/crypto_down.svg" alt="img"
+                                class="crypto_down">0.92%</td>
+                        <td class="red_color fz13"><img src="img/crypto_icons/crypto_down.svg" alt="img"
+                                class="crypto_down">15.86%</td>
+                        <td>$1,046,899,935,348</td>
+                        <td class="text_align_right padding_top ">$1,046,899,935,348<br><span>653,452 BTC</span></td>
+                        <td class="text_align_right"><img src="img/line_red.svg" alt="line_img" class="line_img"></td>
+                    </tr>
+                    <tr>
+                        <td class="star"><img class="star_img" src="img/star.svg" alt="image">6</td>
+                        <td class="fz13"><img src="img/crypto_icons/algo.svg" alt="algo_icon"
+                                class="crypto_icon">Algorand<span>Algo</span></td>
+                        <td class="price">$55,206.61</td>
+                        <td class="green_color fz13"><img src="img/crypto_icons/crypto_up.svg" alt="img"
+                                class="crypto_up">0.92%</td>
+                        <td class="green_color fz13"><img src="img/crypto_icons/crypto_up.svg" alt="img"
+                                class="crypto_up">15.86%</td>
+                        <td>$1,046,899,935,348</td>
+                        <td class="text_align_right padding_top ">$1,046,899,935,348<br><span>653,452 BTC</span></td>
+                        <td class="text_align_right"><img src="img/line.svg" alt="line_img" class="line_img"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
 
 
 </body>
