--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 <body>
     <header>
-        <div class="header_wrapper">
+        <div class="header_container">
+
+            <div class="logo"><img src="img/logo.svg" alt="logo_img" class="logo_img"></div>
             <nav>
-                <img src="img/logo.svg" alt="logo_img" class="logo">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Company</a></li>
@@ -23,8 +24,9 @@
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Blog</a></li>
                 </ul>
-                <button><a href="#">Trade Now</a></button>
             </nav>
+            <button><a href="#">Trade Now</a></button>
+
         </div>
     </header>
     <div class="promo_bg">
@@ -142,6 +144,32 @@
             </table>
         </div>
     </section>
+    <section class="platform">
+        <div class="container">
+            <h2 class="subtitle black">The most trusted cryptocurrency platform</h2>
+            <div class="row">
+                <div class="col col-4"><img src="img/platform_icon_1.svg" alt="img1" class="platform_1">
+                    <h3>Ease of Trading</h3>
+                    <p>Intuitive interface</p>
+                    <p>Instant deposit options</p>
+                    <p>Cash out directly to your bank account</p>
+                </div>
+                <div class="col col-5"><img src="img/platform_icon_2.svg" alt="img2" class="platform_2">
+                    <h3>Institutional-grade Security</h3>
+                    <p>98% of assets stored safely offline</p>
+                    <p>Highly encrypted personal data</p>
+                    <p>Whitelisting and transaction confirmations</p>
+                </div>
+                <div class="col col-3"><img src="img/platform_icon_3.svg" alt="img3" class="platform_3">
+                    <h3>Proven Reliability</h3>
+                    <p>Exchanging bitcoin since 2011</p>
+                    <p>Industry-leading uptime</p>
+                    <p>24/7 dedicated support</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    section.
 
 
 </body>
