--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="subtitle">Today's Cryptocurrency Prices</h2>
+                        <h2 class="subtitle text_align_center">Today's Cryptocurrency Prices</h2>
                         <table cellspacing="0">
                             <thead>
                                 <tr>
@@ -193,7 +193,7 @@
         </section>
         <section class="platform">
             <div class="container">
-                <h2 class="subtitle black">The most trusted cryptocurrency platform</h2>
+                <h2 class="subtitle black text_align_center">The most trusted cryptocurrency platform</h2>
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="platform_block">
@@ -229,15 +229,18 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <h2 class="subtitle">Try the future, today.<br>
-                            Download Crypto</h2>
-                        <p>Stay connected to the market with our mobile app. Featuring advanced order types and
-                            analytical tools for experienced traders, as well as a simple buy & sell interface for those
-                            just getting started.</p>
-                        <div class="store_images"><a href="#"><img src="img/store_img_1.svg" alt="img_1"></a><a
-                                href="#">
-                                <img src="img/store_img_2.svg" alt="img_2">
-                            </a></div>
+                        <div class="wrap">
+                            <h2 class="subtitle text_align_left">Try the future, today.<br>
+                                Download Crypto</h2>
+                            <p>Stay connected to the market with our mobile app. Featuring advanced order types and
+                                analytical tools for experienced traders, as well as a simple buy & sell interface for
+                                those
+                                just getting started.</p>
+                            <div class="store_images"><a href="#"><img src="img/store_img_1.svg" alt="img_1"></a><a
+                                    href="#">
+                                    <img src="img/store_img_2.svg" alt="img_2">
+                                </a></div>
+                        </div>
                     </div>
                     <div class="col-md-6">
                         <div class="store_img_ph"><img src="img/store_img_3.png" alt="img_3"></div>
@@ -251,7 +254,7 @@
         </section>
         <section class="thrive">
             <div class="container">
-                <h2 class="subtitle black">Learn to thrive</h2>
+                <h2 class="subtitle black text_align_center">Learn to thrive</h2>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="item_wrap">
@@ -327,7 +330,7 @@
         </section>
         <section class="subscribe">
             <img src="img/subscribe.svg" alt="img">
-            <h2 class="subscribe">Never miss a drop</h2>
+            <h2 class="subscribe text_align_center">Never miss a drop</h2>
             <h3 class="subscribe">Subscribe for the latest news, drops & collectibles</h3>
             <div class="btn_wrap">
                 <input type="text" placeholder="Enter your email address">
